--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script  src="./app/server.js"></script>
 
+    <script src="../assets/skulpt-dist-master/skulpt.min.js" type="text/javascript"></script>
+    <script src="../assets/skulpt-dist-master/skulpt-stdlib.js" type="text/javascript"></script>
+
+
     <!-- High Stock -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
@@ -56,4 +60,40 @@
       </p>
     </app-root>
   </body>
+
+  <script type="text/javascript">
+  // output functions are configurable.  This one just appends some text
+  // to a pre element.
+  function outf(text) {
+      var mypre = document.getElementById("output");
+      mypre.innerHTML = mypre.innerHTML + text;
+  }
+  function builtinRead(x) {
+      if (Sk.builtinFiles === undefined || Sk.builtinFiles["files"][x] === undefined)
+              throw "File not found: '" + x + "'";
+      return Sk.builtinFiles["files"][x];
+  }
+  // Here's everything you need to run a python program in skulpt
+  // grab the code from your textarea
+  // get a reference to your pre element for output
+  // configure the output function
+  // call Sk.importMainWithBody()
+  function runit() {
+     var prog = ace.edit("yourcode").getValue();
+     var mypre = document.getElementById("output");
+     mypre.innerHTML = '';
+     Sk.pre = "output";
+     Sk.configure({output:outf, read:builtinRead});
+     (Sk.TurtleGraphics || (Sk.TurtleGraphics = {})).target = 'mycanvas';
+     var myPromise = Sk.misceval.asyncToPromise(function() {
+         return Sk.importMainWithBody("<stdin>", false, prog, true);
+     });
+     myPromise.then(function(mod) {
+         console.log('success');
+     },
+         function(err) {
+         console.log(err.toString());
+     });
+  }
+  </script>
 </html>
