--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,9 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script  src="./app/server.js"></script>
+    <script  src="./server.js"></script>
+    <script  src="./server.ts"></script>
+
 
     <script src="../assets/skulpt-dist-master/skulpt.min.js" type="text/javascript"></script>
     <script src="../assets/skulpt-dist-master/skulpt-stdlib.js" type="text/javascript"></script>
