--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,11 @@
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script  src="./server.js"></script>
-    <script  src="./server.ts"></script>
-
 
     <script src="../assets/skulpt-dist-master/skulpt.min.js" type="text/javascript"></script>
     <script src="../assets/skulpt-dist-master/skulpt-stdlib.js" type="text/javascript"></script>
 
+    <link rel="stylesheet" type="text/css" href="../node_modules/angular2-toaster/toaster.css" />
 
     <!-- High Stock -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
